--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,3 +68,21 @@ spring:
 api:
   room:
     url: cofigurl #http://room:8080
+
+feign:
+  hystrix:
+    enabled: true
+
+# To set thread isolation to SEMAPHORE
+#hystrix:
+#  command:
+#    default:
+#      execution:
+#        isolation:
+#          strategy: SEMAPHORE
+
+hystrix:
+  command:
+    # 전역설정
+    default:
+      execution.isolation.thread.timeoutInMilliseconds: 610
