--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -78,5 +78,7 @@ api:
 #          strategy: SEMAPHORE
 
 hystrix:
-  default:
-    execution.isolation.thread.timeoutInMilliseconds: 610
+  command:
+    # 전역설정
+    default:
+      execution.isolation.thread.timeoutInMilliseconds: 610
