--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -28,9 +28,9 @@ spec:
             periodSeconds: 5
             failureThreshold: 10
           livenessProbe:
-            tcpsocket:
+            httpGet:
               path: '/actuator/health'
-              port: 8081
+              port: 8080
             initialDelaySeconds: 120
             timeoutSeconds: 2
             periodSeconds: 5
