--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -19,6 +19,14 @@ spec:
           image: person1acr.azurecr.io/company:latest
           ports:
             - containerPort: 8080
+          livenessProbe:
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            initialDelaySeconds: 120
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 5
           resources:
             limits:
               cpu: 500m
